# VINS-Mobile-Android

./: .gitignore  MainActivity.xlsx  test_video.py  vins_mobild_android.docx  vins_mobile_android_ViewController.docx
VINS_Mobile_AndroidPort/: .gitignore  build.gradle  gradlew.bat.bak.zxdev_mac
VINS_Mobile_AndroidPort/app/: CMakeLists.txt  build.gradle
VINS_Mobile_AndroidPort/app/libs/VINS-Mobile-master/: CMakeLists.txt
VINS_Mobile_AndroidPort/app/libs/VINS-Mobile-master/VINS_ThirdPartyLib/: CMakeLists.txt
VINS_Mobile_AndroidPort/app/libs/VINS-Mobile-master/VINS_ThirdPartyLib/ceres-solver/jni/: Application.mk
VINS_Mobile_AndroidPort/app/libs/VINS-Mobile-master/VINS_ios/: draw_result.cpp  global_param.cpp  global_param.hpp
VINS_Mobile_AndroidPort/app/src/main/: AndroidManifest.xml
VINS_Mobile_AndroidPort/app/src/main/cpp/VINS_Android/: CMakeLists.txt  ViewController.cpp  ViewController.hpp
VINS_Mobile_AndroidPort/app/src/main/cpp/jni/: nativelib.cpp
VINS_Mobile_AndroidPort/app/src/main/java/com/thkoeln/jmoeller/vins_mobile_androidport/: EurocActivity.java  MainActivity.java  VinsJNI.java
VINS_Mobile_AndroidPort/app/src/main/res/layout/: activity_euroc.xml  activity_main.xml
VINS_Mobile_AndroidPort/app/src/main/res/xml/: file_paths.xml
VINS_Mobile_AndroidPort/gradle/wrapper/: gradle-wrapper.properties
doc/: MainActivity.xlsx  ViewController.md
doc/discard/: vins_mobild_android.docx
